add tests, clean up code